pyk/src/tests/unit/kore/test-data/definitions/pass/test-symbol-1.kore
[]

module TEST-SYMBOL-1

  sort S{} []

  symbol f{}() : S{} []

endmodule []
