pyk/src/tests/unit/kore/test-data/definitions/should-fail/test-bool-3.kore
[]
module BOOL
    hooked-sort Bool{} [hook{}("BOOL.Bool")]
    hooked-symbol andBool{}(Bool{}) : Bool{} [hook{}("BOOL.and")]
endmodule
[]
